LIST OF CHANGES
---------------

 - Added an option of having a new boolean flag 'accept_undef_qc_outcome'
   in the study configuration for a product for a particular archiver.
   If this flag is set to a true value, the return value of the
   has_qc_for_release method might return true in cases where previously
   it would have returned false. This is done in order to allow for
   archival of products which either passes QC or have never been through
   manual or robo QC.

release 59.1.0
 - More options for defining wr limit groups: allow an exact match
   to the last component of pipeline function class name.
 - An additional wr limit group - s3 - is configured.
 - The wait4path pipeline job does not have a log. To enable wr to
   recognise that these jobs are unique, echoing a random string
   is added to the shell command. 
 - Remove the limit on the number of NovaSeq runs being archived at
   the same time. Introduce a limit on the number of runs,
   irrespectively of the instrument type, which are moved to archival
   within the last hour.
 - Include pipeline version and name when sending sequencing run metadata
   to the majora service.

release 59.0.0
 - Following a decision to send data to CLIMB regardless of artic
   QC status, the file glob of the data to upload is changed to
   locations where both passed and failed data are available.
 - Code for the archival and analysis daemons refactored:
     1. Removed provisions for the access to configuration files
        which have never been used.
     2. The analysis daemon is no longer responsible for marking
        runs as QC runs.
     3. Removed access to ml warehouse for retrieval of LIMs data
        since this information is no longer required.
 - The qc_run pipeline option is removed, it was supporting a way
   of setting up LIMs data for MiSeq runs which is no longer used.
 - The lims_driver_type pipeline option is removed, it has never